<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hairmall2.ui.home.act1_mainpage"
        android:label="@string/menu_home"
        tools:layout="@layout/act1_mainpage" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hairmall2.ui.gallery.act6_shopsearching"
        android:label="@string/menu_gallery"
        tools:layout="@layout/act6_shopsearching" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hairmall2.ui.slideshow.act11_stylesearching"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/act11_stylesearchingw" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.hairmall2.ui.tools.act13_opentalk"
        android:label="@string/menu_tools"
        tools:layout="@layout/act13_opentalk" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.hairmall2.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.hairmall2.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>